<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
    android:id="@+id/profileFragment"
    android:title="@string/profile"
    android:icon="@drawable/ic_baseline_person_24"
    />
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        />
    <item
    android:id="@+id/categoriesFragment"
    android:title="@string/categories"
    android:icon="@drawable/ic_baseline_apps_24"
    />
    <item
    android:id="@+id/favoritesFragment"
    android:title="@string/favorites"
    android:icon="@drawable/ic_baseline_favorite_24"
    />
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        />



    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_login_24"
        />

</menu>